--- a/edufund-platform/src/App.css
+++ b/edufund-platform/src/App.css
@@ -1,8 +1,12 @@
-.app-wrapper{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
+
 .signup-page{
   flex:1;
+}
+
+
+body{
+  background:linear-gradient(to right,#e0f7fa, #e8f5e9);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin:0;
+  padding:0;
 }
