--- a/edufund-platform/src/styles/SignUp.css
+++ b/edufund-platform/src/styles/SignUp.css
@@ -1,8 +1,13 @@
-.signup-page {
-  background-color: #f5fdf6;
-  min-height: 100vh;
+.signup-wrapper{
   display:flex;
   flex-direction:column;
+  min-height:100vh;
+}
+
+/*As the content grows the footer remains at the bottom of the footer */
+.signup-page {
+  background-color: #f5fdf6;
+  flex:1;
 }
 
 .card {
@@ -23,4 +28,7 @@
 .heading{
     color:#145c41;
     font-weight:600;
+}
+footer{
+  margin-top: auto; /* Enhances the appearance of the footer */
 }
